--- a/applications/obsidian.desktop
+++ b/applications/obsidian.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Obsidian
-Exec=sh -c 'docker run --security-opt seccomp="$HOME/.local/share/seccomp/discord-canary.json" -v obsidianSettings:/home/discord -v /dev/shm:/dev/shm:z -v /var/run/dbus:/var/run/dbus -v "/var/run/user/$(id -u)/bus:/var/run/user/1000/bus" -e DBUS_SESSION_BUS_ADDRESS="unix:path=/var/run/user/1000/bus" -v "/var/run/user/$(id -u)/pulse:/var/run/user/1000/pulse" -e XDG_RUNTIME_DIR=/tmp -e "WAYLAND_DISPLAY=$WAYLAND_DISPLAY" -v "$XDG_RUNTIME_DIR/$WAYLAND_DISPLAY:/tmp/$WAYLAND_DISPLAY" -v "$HOME/Documents/obsidian:/vaults" --rm ghcr.io/soleblaze/obsidian:main'
+Exec=sh -c 'docker run --security-opt seccomp="$HOME/.local/share/seccomp/obsidian.json" -v obsidianSettings:/home/obsidian -v /dev/shm:/dev/shm:z -v /var/run/dbus:/var/run/dbus -v "/var/run/user/$(id -u)/bus:/var/run/user/1000/bus" -e DBUS_SESSION_BUS_ADDRESS="unix:path=/var/run/user/1000/bus" -v "/var/run/user/$(id -u)/pulse:/var/run/user/1000/pulse" -e XDG_RUNTIME_DIR=/tmp -e "WAYLAND_DISPLAY=$WAYLAND_DISPLAY" -v "$XDG_RUNTIME_DIR/$WAYLAND_DISPLAY:/tmp/$WAYLAND_DISPLAY" -v "$HOME/Documents/obsidian:/vaults" --rm ghcr.io/soleblaze/obsidian:main'
 Terminal=false
 Type=Application
 Icon=obsidian
